--- a/tasks/mount_volume.yaml
+++ b/tasks/mount_volume.yaml
@@ -2,7 +2,10 @@
 # Mount database file systems 
 - name: mount database filesystems
 # use ansible mount module
-  mount: name={{ item.value.name }} state=mounted src={{ item.value.src }} fstype={{ item.value.fstype }}
+  mount: name={{ item.value.name }} 
+         state=mounted 
+         src={{ item.value.src }} 
+         fstype={{ item.value.fstype }}
   become: true
   with_dict: "{{ target }}"
   tags:
