--- a/tasks/unmount_volume.yaml
+++ b/tasks/unmount_volume.yaml
@@ -2,6 +2,7 @@
 # Unmount database file systems 
 - name: unmount database filesystems 
 # use ansible mount module
-  mount: name={{ item.value.name }} state=unmounted
+  mount: name={{ item.value.name }} 
+         state=unmounted
   become: true
   with_dict: "{{ target }}" 
