--- a/vars/slob.yaml
+++ b/vars/slob.yaml
@@ -1,20 +1,19 @@
 ---
-# host_vars/z-oracle
-slob:
-  mnt1:
-    name:   /u03/app/oracle/oradata 
-    src:    /dev/mapper/ol-oradata
-    fstype: xfs
-  mnt2: 
-    name:   /u03/app/oracle/oraredo
-    src:    /dev/mapper/ol-oraredo
-    fstype: xfs
-  mnt3: 
-    name:   /u03/app/oracle/fast_recovery_area
-    src:    /dev/mapper/ol-orafra
-    fstype: xfs
+# Database clone variables
+# 
+src_db: oraslob
+tgt_db: devslob
+tgt_oh: /u01/app/oracle/product/12.1.0/dbhome_1
+old_init: /home/oracle/demo/demo2a/initoraslob.ora
+new_init: /home/oracle/demo/demo2a/initdevslob.ora
+tgt_dir: ~/.ansible
+sys_pwd: oracle
+array: "{{ se_EMEA_EBC_m20 }}"
+source: "{{ oraslob }}"
+target: "{{ devslob }}"
+volmap: "{{ tgtmap }}"
 
-slobvol:
-- z-oracle-oradata
-- z-oracle-oraredo
-- z-oracle-orafra
+#Source database volumes
+oraslob:
+- z-oracle1-u02
+- z-oracle1-u03
